--- a/starter-code/public/new.html
+++ b/starter-code/public/new.html
@@ -82,7 +82,9 @@
     </footer>
 
     <!-- TODO: Do all of the HTML files have the same set of script tags? If not, why? -->
-    <!-- Put your response in this comment... -->
+    <!-- Put your response in this comment... 
+    Not all scirpt files and their logic is needed for each HTML file. Each file needs all of the vendor scripts/libraries but not all view, model or controller scripts.
+    -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="vendor/scripts/marked.js"></script>
