--- a/starter-code/public/new.html
+++ b/starter-code/public/new.html
@@ -81,7 +81,7 @@
       &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
 
-    <!-- TODO: Do all of the HTML files have the same set of script tags? If not, why? -->
+    <!-- DONE TODO: Do all of the HTML files have the same set of script tags? If not, why? -->
     <!-- Put your response in this comment... 
     Not all scirpt files and their logic is needed for each HTML file. Each file needs all of the vendor scripts/libraries but not all view, model or controller scripts.
     -->
