--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 
-    <!-- TODO: What is the purpose of the following <script> tag? Where does it interact with other JavaScript? -->
-    <!-- Put your response in this comment... -->
+    <!-- DONE TODO: What is the purpose of the following <script> tag? Where does it interact with other JavaScript? -->
+    <!-- This script tage linked to the author-template handlebars template, it contains the Author Name and the number of words listed before the string "words written" -->
+        <!--This comes into play in the adminView.JS file when we pass adminView.initAdminPage into the Article.fetch.all function-->
+   <!-- We append this handlebars template to the UL with a class of "author-stats" on line 45 -->
     <script id="author-template" type="text/x-handlebars-template">
       <li><strong>{{name}}</strong>: {{numWords}} words written</li>
     </script>
