--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 
-    <!-- TODO: What is the purpose of the following <script> tag? Where does it interact with other JavaScript? -->
-    <!-- Put your response in this comment... -->
+    <!-- DONE TODO: What is the purpose of the following <script> tag? Where does it interact with other JavaScript? -->
+    <!-- Put your response in this comment... It is a Handlebars template that counts the number of words writted by an individual author. It is being populated by the adminView.js file.-->
     <script id="author-template" type="text/x-handlebars-template">
       <li><strong>{{name}}</strong>: {{numWords}} words written</li>
     </script>
